added japanization of the home site

--- a/DPTnew/DPTnew/Views/Account/Manage.cshtml
+++ b/DPTnew/DPTnew/Views/Account/Manage.cshtml
@@ -1,6 +1,6 @@
 ﻿@model DPTnew.Models.LocalPasswordModel
 @{
-    ViewBag.Title = "Manage Account";
+    ViewBag.Title = @DPTnew.Localization.Resource.ManageAccount;
 }
 
 <hgroup class="title">
@@ -9,7 +9,7 @@
 
 <p class="message-success">@ViewBag.StatusMessage</p>
 
-<p>You're logged in as <strong>@ViewBag.User</strong>.</p>
+<p>@DPTnew.Localization.Resource.LoggedIn <strong>@ViewBag.User</strong>.</p>
 
 @if (ViewBag.HasLocalPassword)
 {
