added new column 2Bren, licenseid in refid2, probability in orders

--- a/DPTnew/DPTnew/Views/Order/NewOrderRow.cshtml
+++ b/DPTnew/DPTnew/Views/Order/NewOrderRow.cshtml
@@ -521,8 +521,10 @@
                 <td>
                     <input type="number" name="discount" min="0" value="0" readonly>
                 </td>
-                <td></td>
-                <td></td>
+                <td>Probability</td>
+                <td>
+                    <input type="number" name="probability" min="0" value="0" readonly>
+                </td>
             </tr>
         }
     </tbody>
