--- a/DPTnew/DPTnew/Views/Order/NewOrderRow.cshtml
+++ b/DPTnew/DPTnew/Views/Order/NewOrderRow.cshtml
@@ -523,7 +523,7 @@
                 </td>
                 <td>Probability</td>
                 <td>
-                    <input type="number" name="probability" min="0" value="0" readonly>
+                    <input type="number" name="probability" min="0" value="@Html.DisplayFor(modelItem => item.Probability)" readonly>
                 </td>
             </tr>
         }
